fix: path issues with nginx has been fixed.
